site/api/4.04/index_module_types.md
<!-- ((! set title API !)) ((! set documentation !)) ((! set api !)) ((! set nobreadcrumb !)) -->
<div class="api"><header><nav class="toc brand"><a class="brand" href="https://ocaml.org/"><img src="colour-logo-gray.svg" class="svg" alt="OCaml"></a></nav><nav class="toc"><div class="toc_version"><a href="/docs" id="version-select">API Version 4.04</a></div><a href="index.html">&lt; General Index</a><div class="api_search"><input type="text" name="apisearch" id="api_search" oninput="mySearch(false);" onkeypress="this.oninput();" onclick="this.oninput();" onpaste="this.oninput();">
<img src="search_icon.svg" alt="Search" class="svg" onclick="mySearch(false)"></div>
<div id="search_results"></div><div class="toc_title"><a href="#top">Index of module types</a></div><ul></ul></nav></header>

<h1>Index of module types</h1>
<table>
<tbody><tr><td align="left"><br>H</td></tr>
<tr><td><a href="MoreLabels.Hashtbl.HashedType.html">HashedType</a> [<a href="MoreLabels.Hashtbl.html">MoreLabels.Hashtbl</a>]</td>
<td></td></tr>
<tr><td><a href="Hashtbl.HashedType.html">HashedType</a> [<a href="Hashtbl.html">Hashtbl</a>]</td>
<td><div class="info">
The input signature of the functor <a href="Hashtbl.Make.html"><code class="code"><span class="constructor">Hashtbl</span>.<span class="constructor">Make</span></code></a>.
</div>
</td></tr>
<tr><td><a href="Misc.HookSig.html">HookSig</a> [<a href="Misc.html">Misc</a>]</td>
<td></td></tr>
<tr><td align="left"><br>O</td></tr>
<tr><td><a href="Set.OrderedType.html">OrderedType</a> [<a href="Set.html">Set</a>]</td>
<td><div class="info">
Input signature of the functor <a href="Set.Make.html"><code class="code"><span class="constructor">Set</span>.<span class="constructor">Make</span></code></a>.
</div>
</td></tr>
<tr><td><a href="MoreLabels.Set.OrderedType.html">OrderedType</a> [<a href="MoreLabels.Set.html">MoreLabels.Set</a>]</td>
<td></td></tr>
<tr><td><a href="MoreLabels.Map.OrderedType.html">OrderedType</a> [<a href="MoreLabels.Map.html">MoreLabels.Map</a>]</td>
<td></td></tr>
<tr><td><a href="Map.OrderedType.html">OrderedType</a> [<a href="Map.html">Map</a>]</td>
<td><div class="info">
Input signature of the functor <a href="Map.Make.html"><code class="code"><span class="constructor">Map</span>.<span class="constructor">Make</span></code></a>.
</div>
</td></tr>
<tr><td align="left"><br>S</td></tr>
<tr><td><a href="Weak.S.html">S</a> [<a href="Weak.html">Weak</a>]</td>
<td><div class="info">
The output signature of the functor <a href="Weak.Make.html"><code class="code"><span class="constructor">Weak</span>.<span class="constructor">Make</span></code></a>.
</div>
</td></tr>
<tr><td><a href="Strongly_connected_components.S.html">S</a> [<a href="Strongly_connected_components.html">Strongly_connected_components</a>]</td>
<td></td></tr>
<tr><td><a href="Set.S.html">S</a> [<a href="Set.html">Set</a>]</td>
<td><div class="info">
Output signature of the functor <a href="Set.Make.html"><code class="code"><span class="constructor">Set</span>.<span class="constructor">Make</span></code></a>.
</div>
</td></tr>
<tr><td><a href="MoreLabels.Set.S.html">S</a> [<a href="MoreLabels.Set.html">MoreLabels.Set</a>]</td>
<td></td></tr>
<tr><td><a href="MoreLabels.Map.S.html">S</a> [<a href="MoreLabels.Map.html">MoreLabels.Map</a>]</td>
<td></td></tr>
<tr><td><a href="MoreLabels.Hashtbl.S.html">S</a> [<a href="MoreLabels.Hashtbl.html">MoreLabels.Hashtbl</a>]</td>
<td></td></tr>
<tr><td><a href="Map.S.html">S</a> [<a href="Map.html">Map</a>]</td>
<td><div class="info">
Output signature of the functor <a href="Map.Make.html"><code class="code"><span class="constructor">Map</span>.<span class="constructor">Make</span></code></a>.
</div>
</td></tr>
<tr><td><a href="Identifiable.S.html">S</a> [<a href="Identifiable.html">Identifiable</a>]</td>
<td></td></tr>
<tr><td><a href="Hashtbl.S.html">S</a> [<a href="Hashtbl.html">Hashtbl</a>]</td>
<td><div class="info">
The output signature of the functor <a href="Hashtbl.Make.html"><code class="code"><span class="constructor">Hashtbl</span>.<span class="constructor">Make</span></code></a>.
</div>
</td></tr>
<tr><td><a href="Ephemeron.S.html">S</a> [<a href="Ephemeron.html">Ephemeron</a>]</td>
<td><div class="info">
The output signature of the functor <a href="Ephemeron.K1.Make.html"><code class="code"><span class="constructor">Ephemeron</span>.<span class="constructor">K1</span>.<span class="constructor">Make</span></code></a> and <a href="Ephemeron.K2.Make.html"><code class="code"><span class="constructor">Ephemeron</span>.<span class="constructor">K2</span>.<span class="constructor">Make</span></code></a>.
</div>
</td></tr>
<tr><td><a href="MoreLabels.Hashtbl.SeededHashedType.html">SeededHashedType</a> [<a href="MoreLabels.Hashtbl.html">MoreLabels.Hashtbl</a>]</td>
<td></td></tr>
<tr><td><a href="Hashtbl.SeededHashedType.html">SeededHashedType</a> [<a href="Hashtbl.html">Hashtbl</a>]</td>
<td><div class="info">
The input signature of the functor <a href="Hashtbl.MakeSeeded.html"><code class="code"><span class="constructor">Hashtbl</span>.<span class="constructor">MakeSeeded</span></code></a>.
</div>
</td></tr>
<tr><td><a href="MoreLabels.Hashtbl.SeededS.html">SeededS</a> [<a href="MoreLabels.Hashtbl.html">MoreLabels.Hashtbl</a>]</td>
<td></td></tr>
<tr><td><a href="Hashtbl.SeededS.html">SeededS</a> [<a href="Hashtbl.html">Hashtbl</a>]</td>
<td><div class="info">
The output signature of the functor <a href="Hashtbl.MakeSeeded.html"><code class="code"><span class="constructor">Hashtbl</span>.<span class="constructor">MakeSeeded</span></code></a>.
</div>
</td></tr>
<tr><td><a href="Ephemeron.SeededS.html">SeededS</a> [<a href="Ephemeron.html">Ephemeron</a>]</td>
<td><div class="info">
The output signature of the functor <a href="Ephemeron.K1.MakeSeeded.html"><code class="code"><span class="constructor">Ephemeron</span>.<span class="constructor">K1</span>.<span class="constructor">MakeSeeded</span></code></a> and <a href="Ephemeron.K2.MakeSeeded.html"><code class="code"><span class="constructor">Ephemeron</span>.<span class="constructor">K2</span>.<span class="constructor">MakeSeeded</span></code></a>.
</div>
</td></tr>
<tr><td align="left"><br>T</td></tr>
<tr><td><a href="Identifiable.Thing.html">Thing</a> [<a href="Identifiable.html">Identifiable</a>]</td>
<td></td></tr>
</tbody></table>

<div class="copyright">The present documentation is copyright Institut National de Recherche en Informatique et en Automatique (INRIA). A complete version can be obtained from <a href="http://caml.inria.fr/pub/docs/manual-ocaml/">this page</a>.</div></div>